<resources>
    <string name="app_name">Quizzler</string>
    <string name="app_desc">Quizzler is a mobile game where you can test your knowledge on cars. Sit tight, wear your seat belts and good luck to you !</string>
    <string name="identify_make_btn">Identify Make</string>
    <string name="hint_btn">Hint Text</string>
    <string name="identify_image_btn">Identify Image</string>
    <string name="advanced_level_btn">Advanced Level</string>
    <string name="identify_make">Identify Car Make</string>
    <string name="make_submit">Identify</string>
    <string name="next_item">Next</string>
    <string name="correct_mark">Correct</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_text">wrong</string>
    <string name="guess_make">Guess Make</string>
    <string name="imageBtnOne_Description">imageBtnOne</string>
    <string name="imageBtnTwo_Description">imageBtnTwo</string>
    <string name="imageBtnThree_Description">imageBtnThree</string>
    <string name="cross_image">cross_image</string>
    <string name="car_manufacture">Car Manufacture</string>
    <string name="submit">Submit</string>
    <string name="user_info">Yasitha Lalanga Gamage W1761101 | 2019419</string>
    <string name="advancedMode">Timer </string>
    <string name="todo">TODO</string>
    <string name="select_an_option">Select an Option</string>
    <string name="identify_make_text">Identify Make</string>
    <string name="identify_car">Identify Car</string>
    <string name="imageWrongDisplayMsg">Displayed in Orange Background</string>
    <string name="zero">0</string>
    <string name="score">score :  </string>
</resources>