<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/logoemp"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:layout_below="@id/logo"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/lorem_50"
        android:layout_below="@+id/app_name"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <LinearLayout
        android:id="@+id/button_stack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/identify_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identify_make_btn"
            android:layout_marginBottom="20dp"
            android:onClick="identifyMake"/>

        <Button
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/hint_btn"
            android:onClick="hintCars"/>

        <Button
            android:id="@+id/identify_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/identify_image_btn"
            android:onClick="identifyImage"/>

        <Button
            android:id="@+id/advanced_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/advanced_level_btn"
            android:onClick="advancedLevel"/>

    </LinearLayout>

    <TextView
        android:id="@+id/copyrights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/user_info" />

    <Switch
        android:id="@+id/advanceMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/advancedMode"
        tools:ignore="RelativeOverlap,UseSwitchCompatOrMaterialXml"
        android:layout_marginEnd="14dp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>