<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyImage">

    <Button
        android:id="@+id/nextSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next_item"
        android:onClick="nextImageSet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/randomCarName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nextSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageBtnTwo"
        android:layout_width="155dp"
        android:layout_height="153dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/imageBtnTwo_Description"
        android:onClick="imageTwoSelected"
        android:scaleType="fitCenter"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toTopOf="@+id/imageBtnThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageBtnOne"
        android:layout_width="155dp"
        android:layout_height="153dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/imageBtnOne_Description"
        android:onClick="imageOneSelected"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageBtnThree"
        app:layout_constraintEnd_toStartOf="@+id/imageBtnTwo"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_button"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageBtnThree"
        android:layout_width="155dp"
        android:layout_height="153dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/imageBtnThree_Description"
        android:onClick="imageThreeSelected"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/randomCarName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/timerViewIdentify"
        android:layout_width="60dp"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageBtnTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />
</androidx.constraintlayout.widget.ConstraintLayout>